CSS Y PRIMERA INTERFAZA

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvedidos</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css" >
 </head>
+
 <body>
-    Hola como estas     
+ 
+    <h1 id="title1" align="center" name="Titulo_index">BIENVENDOS A ISAe </h1>
+    <hr width="70%">
+
+    <div  id="general">
+    
+        
+
+
+</div>
+
+
+    </div>
+  
+
 </body>
+
 </html>
