--- a/Index.html
+++ b/Index.html
@@ -4,25 +4,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvedidos</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" >
+    <link rel="stylesheet" href="/css/style.css">
+
+
+
+
+    <title>Login</title>
+
 </head>
 
-<body>
- 
-    <h1 id="title1" align="center" name="Titulo_index">BIENVENDOS A ISAe </h1>
-    <hr width="70%">
 
-    <div  id="general">
-    
-        
+<body class="general">
+
+    <!-- Header -->
+    <div id="header">
+        <div class="container">
+
+            <!-- Logo -->
+            <h1><a href="#" id="logo">AGENDA IPN</a></h1>
+
+            <!-- Nav -->
+            <nav id="nav">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li>
+                        <a href="">Consultas</a>
+                        <ul>
+
+                            <li>
+                                <a href="">Planes de estudio</a>
+                                <ul>
+                                    <li><a href="Telematica.php">Telematica</a></li>
+                                    <li><a href="Bionica.php">Bionica</a></li>
+                                    <li><a href="Mecatronica.php">Mecatronica</a></li>
+                                    <li><a href="Energia.php">Energia</a></li>
+
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </li>
 
 
-</div>
+                    <li><a href="RegistroA.html">Registrate</a></li>
+                </ul>
+            </nav>
+
+
+
+            <div class="general">
+                <div class="form__top">
+                    <h2>IPN <span> UPIITA </span></h2>
+                </div>
+                <form class="form__reg" action="php/Login.php" method="post" onsubmit="">
+
+
+                    <input class="input" type="text" placeholder="&#128100;  Usuario" name="User" required autofocus>
+                    <input class="input" type="Password" placeholder="&#128272;  Password" name="Password" required
+                        autofocus>
+                    <input class="btn__reset2" type="submit" value="Ingresar">
+                    <div class="form__top1">
+
+                        <h2> <span> No cuentas con Cuenta? </span></h2>
+                        <a href="RegistroA.html" alig>Registrate</a>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+
+
+
 
 
     </div>
-  
+
+
+
+
+
 
 </body>
 
